security_group.tf
resource "aws_security_group" "jung-sg" {
  vpc_id = aws_vpc.jung-main.id

  egress {
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name      = "jung-sg"
    createdBy = "Jung"
  }
}
